styles/main.css
* {
    margin: 0;
    padding: 0;
}

html, body {
    height: 100%;
}

.notice {
    font-size: 16px;
    padding: 60px;
    text-align: center;
}

#error-symbol {
    display: none;
}

.main-section {
    height: 95%;
    width: 100%;
}

.event-list-group {
    display: block !important;
    height: 90vh;
    overflow: scroll;
    visibility: hidden;
}

.event-img {
    max-width: 90px;
}

.event-item {
    display: none;
}

.event-title {
    font-size: 1em;
}

.event-text {
    font-size: 0.8em;
}

.event-text::before {
    content: " ";
    white-space: pre;
}

#google-map-container {
    width: 100%;
    height: 100%;
    position: relative;
    top:0;
}

#google-map {
    height: 100vh;
    width: 100%;
}

.gm-infoWindow {
    max-height: 300px;
    width: 300px !important;
}

.gm-infoWindow img {
    max-width: 80px !important;
}

footer {
    height:5vh;
}

#markerLayer img[src='./assets/icons/currentPosition.png'] {
    animation: pulse .5s infinite alternate;
    -webkit-animation: pulse .5s infinite alternate;
    transform-origin: center;
    -webkit-transform-origin: center;
}

@keyframes pulse{
    to {
        transform: scale(0.7);
        -webkit-transform: scale(0.7);
    }
}

@-webkit-keyframes pulse{
    to {
        transform: scale(0.7);
        -webkit-transform: scale(0.7);
    }
}

